# sozu-gateway

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PROGRESS.md  PROTOCOL.md  README.md  justfile
.github/: dependabot.yml
.github/actions/install-just/: action.yml
.github/workflows/: ci.yml  release.yml
charts/sozu-gateway/: Chart.yaml  values.yaml
charts/sozu-gateway/templates/: deployment.yaml  ingressclass.yaml  pdb.yaml  rbac.yaml  service.yaml
crates/builder/: Cargo.toml
crates/builder/src/: gateway.rs  lib.rs
crates/builder/tests/: build.rs  gateway.rs
crates/builder/tests/snapshots/: build__happy_path_http_and_tls.snap  build__path_types_map_correctly.snap  gateway__http_route_maps_to_ir.snap
crates/controller/: Cargo.toml
crates/controller/src/: events.rs  health.rs  main.rs  metrics.rs  shadow.rs  status.rs
crates/gateway-api/: Cargo.toml  README.md
crates/gateway-api/src/: gateway.rs  gatewayclass.rs  httproute.rs  lib.rs  referencegrant.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/prometheus/src/: lib.rs
crates/prometheus/tests/: render.rs
crates/sozu-agent/: Cargo.toml
crates/sozu-agent/examples/: agent_smoke.rs
crates/sozu-agent/src/: lib.rs
crates/translator/: Cargo.toml
crates/translator/src/: lib.rs
crates/translator/tests/: golden.rs
crates/translator/tests/fixtures/: cert_a.pem  cert_b.pem  key_a.pem  key_b.pem
crates/translator/tests/snapshots/: golden__diff_add_new_route.snap  golden__diff_cert_rotation_adds_new_before_removing_old.snap  golden__diff_from_empty_equals_full_adds.snap  golden__diff_scale_up_emits_single_add_backend.snap  golden__ir_to_requests_full.snap  golden__ir_to_requests_with_filters.snap  golden__reconcile_add_new_route.snap  golden__reconcile_adds_then_removes_l4_route.snap  golden__reconcile_cert_rotation_is_single_replace.snap  golden__reconcile_from_empty_equals_full_adds.snap  golden__reconcile_remove_all_includes_remove_certificate.snap  golden__reconcile_scale_down_emits_single_remove_backend.snap
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml
deploy/sozu/: config.toml
docs/: E2E-RESULTS.md  features.md
docs/conformance/: gateway-http-v1.2.1-report.yaml
docs/getting-started/: installation.md
examples/: README.md  gateway-api.yaml
examples/api-gateway/: README.md  cert-manager.yaml  external-dns.yaml  gateway-api.yaml  header-filter.yaml  redirect.yaml  url-rewrite.yaml
examples/features/: README.md  connection-limit.yaml  header-filter.yaml  load-balancing-and-sticky.yaml  redirect.yaml  ssl-redirect.yaml  url-rewrite.yaml
examples/ingress/: README.md  cert-manager.yaml  connection-limit.yaml  demo-app.yaml  external-dns.yaml  l4-tcp.yaml  load-balancing-and-sticky.yaml  ssl-redirect.yaml
scripts/: e2e-gateway.sh  e2e-l4.sh  e2e-lib.sh  e2e.sh
