[package]
name = "sozu-gw-controller"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

# controller = the binary: kube-rs Controller runtime (watchers, reconcile,
# error_policy), wiring builder -> translator -> sozu-agent.
[dependencies]
sozu-gw-ir = { workspace = true }
sozu-gw-builder = { workspace = true }
sozu-gw-translator = { workspace = true }
sozu-gw-agent = { workspace = true }
sozu-gw-prometheus = { workspace = true }
sozu-gw-gateway-api = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"

[dev-dependencies]
# `start_paused` tests for the resync interval (virtual time, instant runs).
tokio = { workspace = true, features = ["test-util"] }

[dependencies.kube]
version = "4"
features = ["runtime", "derive", "client"]

[dependencies.k8s-openapi]
version = "0.28"
features = ["v1_36"]

[[bin]]
name = "sozu-gw-controller"
path = "src/main.rs"
